test/compile_errors/stage1/obj/while_expected_error_union_got_bool.zig
export fn foo() void {
    while (bar()) |x| {_ = x;} else |err| {_ = err;}
}
fn bar() bool { return true; }

// while expected error union, got bool
//
// tmp.zig:2:15: error: expected error union type, found 'bool'
